# ManaweaveAndRunes

./: CHANGELOG.md  LICENSE.txt  README.md  build.gradle  gradle.properties  version-check.sh
.github/workflows/: build.yml
development_files/blocks/: air_mana_infused_rock.aseprite  fire_mana_infused_rock.aseprite  mana_collector.bbmodel  mana_concentrator.bbmodel  mana_concnetrator.bbmodel  mana_infused_rock.aseprite  ritual_anchor - Animated.bbmodel  ritual_anchor.json  rune_block_active.aseprite  rune_block_inactive.aseprite  rune_carver_bottom.aseprite  rune_carver_side.aseprite  rune_carver_top.aseprite  runewrought_bench.bbmodel  tanzatine_block.aseprite  tanzatine_block_bottom.aseprite  tanzatine_block_top.aseprite
development_files/gui/: clock.aseprite  mana_generator.aseprite  mana_storage.aseprite  pedestal.aseprite  rune_carver.aseprite  spell_designer.aseprite  spell_scriber.aseprite  wand_modification_table.aseprite
development_files/items/: AmethystAirRune.aseprite  AmethystFireRune.aseprite  AmethystRuneBase.aseprite  SpellHolder.aseprite  SpellHolderDefaultRune.aseprite  chisel_template.aseprite  diamond_chisel.aseprite  mana_concnetrator_item.bbmodel  mana_weavers_staff.bbmodel  mana_weavers_staff.json  mana_weavers_staff_wip.bbmodel  model.animation.json  position_rune.aseprite
development_files/mana/: air_mana.aseprite  earth_mana.aseprite  entropy_mana.aseprite  (+5 more)
development_files/scripts/: json_from_nbt.py  main.py  pyproject.toml
docs/: DEVELOPMENT.md  bugs.md  ideas.md  spellcasting.md  todo.md
metadata/: version_info.json
(+407 files in other folders)
