[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Simon Felix Seeger <simon.f.seeger@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
nbt = { git = "https://github.com/twoolie/NBT.git" }
numpy = "^1.16"


[tool.poetry.group.dev.dependencies]
ipython = "^7.34"
ipykernel = "^6.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
